// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Tabs should enable the Routing tab when prop is passed 1`] = `
<Tabs__Tab
  activeClassName="active"
  data-test="routing"
  key="routing"
  to="/questionnaire/111111111111111111111111111111111111/222222222222222222222222222222222222/333333333333333333333333333333333333/routing"
>
  <IconText
    hideText={false}
    icon={[Function]}
  >
    Routing
  </IconText>
</Tabs__Tab>
`;

exports[`components/Tabs should enable the preview tab when prop is passed 1`] = `
<Tabs__Tab
  activeClassName="active"
  data-test="preview"
  key="preview"
  to="/questionnaire/111111111111111111111111111111111111/222222222222222222222222222222222222/333333333333333333333333333333333333/preview"
>
  <IconText
    hideText={false}
    icon={[Function]}
  >
    Preview
  </IconText>
</Tabs__Tab>
`;

exports[`components/Tabs should render a confirmation link when provided 1`] = `
<div>
  <Tabs__TabsContainer
    data-test="tabs-nav"
  >
    <Tabs__Tab
      activeClassName="active"
      data-test="design"
      key="design"
      to="/questionnaire/111111111111111111111111111111111111/222222222222222222222222222222222222/333333333333333333333333333333333333/444444444444444444444444444444444444/design"
    >
      <IconText
        hideText={false}
        icon={[Function]}
      >
        Design
      </IconText>
    </Tabs__Tab>
    <Tabs__DisabledTab
      data-test="preview"
      key="preview"
    >
      <IconText
        hideText={false}
        icon={[Function]}
      >
        Preview
      </IconText>
    </Tabs__DisabledTab>
    <Tabs__DisabledTab
      data-test="routing"
      key="routing"
    >
      <IconText
        hideText={false}
        icon={[Function]}
      >
        Routing
      </IconText>
    </Tabs__DisabledTab>
  </Tabs__TabsContainer>
  <Tabs__TabsBody
    data-test="tabs-body"
  >
    Tab Content
  </Tabs__TabsBody>
</div>
`;

exports[`components/Tabs should render link to section if params are for a section 1`] = `
<div>
  <Tabs__TabsContainer
    data-test="tabs-nav"
  >
    <Tabs__Tab
      activeClassName="active"
      data-test="design"
      key="design"
      to="/questionnaire/111111111111111111111111111111111111/222222222222222222222222222222222222/design"
    >
      <IconText
        hideText={false}
        icon={[Function]}
      >
        Design
      </IconText>
    </Tabs__Tab>
    <Tabs__DisabledTab
      data-test="preview"
      key="preview"
    >
      <IconText
        hideText={false}
        icon={[Function]}
      >
        Preview
      </IconText>
    </Tabs__DisabledTab>
    <Tabs__DisabledTab
      data-test="routing"
      key="routing"
    >
      <IconText
        hideText={false}
        icon={[Function]}
      >
        Routing
      </IconText>
    </Tabs__DisabledTab>
  </Tabs__TabsContainer>
  <Tabs__TabsBody
    data-test="tabs-body"
  >
    Tab Content
  </Tabs__TabsBody>
</div>
`;

exports[`components/Tabs should render with design tab enabled by default 1`] = `
<div>
  <Tabs__TabsContainer
    data-test="tabs-nav"
  >
    <Tabs__Tab
      activeClassName="active"
      data-test="design"
      key="design"
      to="/questionnaire/111111111111111111111111111111111111/222222222222222222222222222222222222/333333333333333333333333333333333333/design"
    >
      <IconText
        hideText={false}
        icon={[Function]}
      >
        Design
      </IconText>
    </Tabs__Tab>
    <Tabs__DisabledTab
      data-test="preview"
      key="preview"
    >
      <IconText
        hideText={false}
        icon={[Function]}
      >
        Preview
      </IconText>
    </Tabs__DisabledTab>
    <Tabs__DisabledTab
      data-test="routing"
      key="routing"
    >
      <IconText
        hideText={false}
        icon={[Function]}
      >
        Routing
      </IconText>
    </Tabs__DisabledTab>
  </Tabs__TabsContainer>
  <Tabs__TabsBody
    data-test="tabs-body"
  >
    Tab Content
  </Tabs__TabsBody>
</div>
`;
